firmware/defmt-test/macros/tests/ui/after_each-has-ignore-macro.stderr
error: `#[ignore]` is not allowed on the `#[after_each]` function
 --> tests/ui/after_each-has-ignore-macro.rs:7:8
  |
7 |     fn init() {}
  |        ^^^^
