firmware/defmt-test/macros/tests/ui/after_each-has-ignore-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[after_each]
    #[ignore]
    fn init() {}
}
